fix navbar jump issue

--- a/frontend/assets/stylesheets/components/business_page.scss
+++ b/frontend/assets/stylesheets/components/business_page.scss
@@ -1,13 +1,11 @@
 .business-show {
   width: 90%;
-  height: 1000px;
   margin: 5% auto;
   display: flex;
   justify-content: space-between;
 }
 
 .business-about-section {
-  height: 400px;
   width: 65%;
 }
 
