--- a/frontend/assets/stylesheets/components/loading_icon.scss
+++ b/frontend/assets/stylesheets/components/loading_icon.scss
@@ -13,7 +13,7 @@ $bg-color: $lightest-purple;
 }
 
 .loader {
-
+  transform: scale(.7);
   position: relative;
   width: 75px;
   height: 100px;
