--- a/frontend/assets/stylesheets/components/navbar.scss
+++ b/frontend/assets/stylesheets/components/navbar.scss
@@ -40,6 +40,10 @@
   overflow: visible;
 }
 
+.sticky-padding {
+  padding-top: 65px;
+}
+
 .search-input-wrapper {
   display: flex;
   align-items: center;
